# nixosconfiguration

./: .gitattributes  .gitignore  alacritty.nix  apparmor.nix  checks.nix  common.nix  config.el  configuration.nix  containers.nix  converters.nix  default.pa  defaultApplications.nix  desktopSpecifc.nix  doom.nix  emacs.nix  enviroments.nix  environments.nix  fish.nix  flake.nix  hardware-configuration.nix  haskell.cabal  hie.yaml  home.nix  homeCommon.nix  homeLinuxSpecific.nix  homeMacSpecific.nix  laptopSpecific.nix  linuxSpecific.nix  macSpecific.nix  mail.nix  nixosconf.cabal  notmuchTags  overlays.nix  pci-passthrough.nix  pia-nm.nix  pia-openvpn.nix  private.nix  scripts.cabal  themeChanger.nix  thinkpadSpecific.nix  (+6 more)
.git-crypt/keys/default/0/: 4E2D9B26940E0DABF376B7AF76762421D45837DE.gpg
doom.d/: config.el  init.el  packages.el
haskell/: haskell.cabal
haskell/home-automation/: automation.hs
haskell/monitor-changer/: MonitorChanger.hs
haskell/my-common/: Bookmarks.hs  Utils.hs  Xrandr.hs  my-common.cabal
haskell/scans/: Scan.hs
haskell/xmonad-desktop/: xmonad.hs
haskell/xmonad-thinkpad/: xmonad.hs
homeModules/: firefox.nix
linux/: configuration.nix  cords.nix  defaultApplications.nix  dnscrypt.nix  home.nix  themeChanger.nix
linux/deck/: configuration.nix  disko.nix  diskoEncrypted.nix
linux/deck/secrets/: florian.age  secrets.nix
linux/desktop/: configuration.nix
linux/desktop/home/: configuration.nix  xmonad.hs
linux/desktop/secrets/: secrets.nix  steampass.age  steamuser.age
linux/home/: configuration.nix
linux/rpi4/: configuration.nix  disko.nix
linux/rpi4/secrets/: rpi4WireguardPrivate.age  secrets.nix
linux/thinkpad/: apparmor.nix  backup.nix  backup.pub  configuration.nix  hardware.nix  hibernate.nix  office.ovpn  sshKeys.nix  themeChanger.nix  wireguard.nix  work-container.nix  zsh.nix
linux/thinkpad/home/: authinfo.gpg  configuration.nix  defaultApplications.nix  firefox.nix  mail.nix  notmuchTags  themeChanger.nix  zsh.nix
linux/thinkpad/home/kodi/: arteplussept.xml  estuary.xml  invidious.xml  sources.xml  vim.xml
linux/thinkpad/home/xmonad/: xmonad.hs
linux/thinkpad/home/xmonad/lib/: Bookmarks.hs  Utils.hs  Xrandr.hs
linux/thinkpad/scripts/: default.nix  linkopenwithx.sh
linux/thinkpad/secrets/: backblaze-restic.age  backblaze.age  restic-password.age  secrets.nix  thinkpadWireguardPrivate.age  vpn.age  vpnPrivateKey.age
linux/thinkpad/test-secrets/: birthdate.age  id_rsa  id_rsa.pub  password.age  passwordHash.age  secrets.nix
mac/: configuration.nix  home.nix  zsh.nix
modules/: default.nix  wayland.nix  xserver.nix
mylib/: apparmor.nix  converters.nix  default.nix  protected.nix
scripts/: Scan.hs  scripts.cabal
secrets/: birthdate.age  florian.age  paperless.age  pia-pass.age  pia-user.age  piaAuthUserPass.age  secrets.nix
textcleaner/: default.nix  textcleaner.patch
