cabal-version:      2.4
name:               haskell
version:            0.1.0.0

author:             Florian Engel
maintainer:         engelflorian@posteo.de

executable monitor-changer
  main-is:          haskell/monitor-changer/MonitorChanger.hs
  build-depends:    base, haskell,
  default-language: Haskell2010

executable scans
  main-is:          haskell/scans/Scan.hs
  build-depends:    base, turtle, transformers, foldl, text, time, exceptions, extra
  default-language: Haskell2010

executable home-automation
  main-is:          haskell/home-automation/automation.hs
  build-depends:    base, aeson, net-mqtt, network-uri, time, bytestring, text
  default-language: Haskell2010

executable xmonad-desktop
  main-is:          haskell/xmonad-desktop/xmonad.hs
  build-depends:    base, xmonad, xmonad-contrib
  default-language: Haskell2010

executable xmonad-thinkpad
  main-is:          haskell/xmonad-thinkpad/xmonad.hs
  build-depends:    base,
                    xmonad,
                    xmonad-contrib,
                    MissingH,
                    protolude,
                    containers,
                    data-default,
                    text,
                    pretty-simple,
                    haskell
  default-language: Haskell2010

library
  hs-source-dirs:   haskell/my-common
  build-depends:    base, protolude, text, xmonad-contrib
  exposed-modules:  Bookmarks, Xrandr, Utils
