cabal-version:      2.4
name:               nixosconf
version:            0.1.0.0

author:             Florian Engel
maintainer:         engelflorian@posteo.de

executable scans
  main-is:          scripts/Scan.hs
  build-depends:    base, turtle, transformers, foldl, text, time, exceptions, extra
  default-language: Haskell2010

executable xmonadDesktop
  main-is:          linux/desktop/home/xmonad.hs
  build-depends:    base, xmonad, xmonad-contrib
  default-language: Haskell2010

executable xmonadThinkpad
  main-is:          linux/thinkpad/home/xmonad.hs
  build-depends:    base, xmonad, xmonad-contrib, missingH, protolude
  default-language: Haskell2010
