cabal-version:      2.4
name:               scripts
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Florian Engel
maintainer:         engelflorian@posteo.de

-- A copyright notice.
-- copyright:
-- category:

executable scans
    main-is:          scripts/Scan.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base, turtle, transformers, foldl, text, time, exceptions, extra
    default-language: Haskell2010

executable xmonadConf
  main-is:             linux/desktop/home/xmonad.hs
  -- other-extensions:
  build-depends:       base,
                       xmonad,
                       xmonad-contrib
  -- hs-source-dirs:
  default-language:    Haskell2010
